  You should use FSTCompletionLookup (the old FSTLookup impl is deprecated).
  (Dawid Weiss, Robert Muir)

Bug Fixes

 * LUCENE-3600: BlockJoinQuery now supports parent docs that have no
   children (such docs will never match, but BJQ was tripping an
   assert if such a parent doc was the first doc in the segment).
   (Shay Banon, Mike McCandless)

 * LUCENE-3609: Fix regression in BooleanFilter, introduced in Lucene 3.5,
   to correctly handle minShouldMatch behaviour of previous versions.
   (Shay Banon, Uwe Schindler)

 * LUCENE-3668: For a multi-token synonym mapping to a single token,
   SynonymFilter will now set the start offset of the synonym token to
   the start offset of the first matched token, and the end offset of
   the synonym token to the end offset of the last matched token.
   This way if the synonym token is used for highlighting, it will
   cover all tokens it had matched.  (Koji Sekiguchi, Robert Muir,
   Mike McCandless)

 * LUCENE-3686: CategoryEnhancement must override Object.equals(Object).
   (Sivan Yogev via Shai Erera)

 * LUCENE-3697: SimpleBoundaryScanner does not work well when highlighting
   at the beginning of the text. (Shay Banon via Koji Sekiguchi)

 * LUCENE-3719: FVH: slow performance on very large queries.
   (Igor Motov via Koji Sekiguchi)

Documentation

 * LUCENE-3599: Javadocs for DistanceUtils.haversine() were incorrectly
   stating the expected order of the arguments (David Smiley via hossman)

======================= Lucene 3.5.0 ================

Changes in backwards compatibility policy

 * LUCENE-3446: Removed BooleanFilter.finalResult() due to change to
   FixedBitSet.  (Uwe Schindler)

 * LUCENE-3508: Changed some method signatures in decompounding TokenFilters
   to make them no longer use the Token class.  (Uwe Schindler)
   
 * LUCENE-3557: The various SpellChecker.indexDictionary methods were removed,
   and consolidated to one:

   indexDictionary(Dictionary dict, IndexWriterConfig config, boolean optimize)